--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Service Company</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home - Service Company</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to Our Service Company</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <h2>Your Trusted Service Provider</h2>
-        <p>We offer a wide range of services including Plumbing, Painting, Masonry, and Hardware.</p>
-    </main>
-    <footer>
-        <p>&copy; 2025 Service Company</p>
-    </footer>
+  <header>
+    <h1>Welcome to Our Service Company</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <section class="intro">
+      <h2>Expert Services in Bangalore</h2>
+      <p>We provide professional Plumbing, Painting, Masonry, Hardware, and Interior Work services with expert technicians at reasonable prices.</p>
+    </section>
+    <section class="service-images">
+     ="https://images.unsplash.com/photo-1581579185169-3c5f3e9f9f4b" alt="Plumbing">
+      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting">
+      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Masonry">
+      <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Hardware">
+      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work">
+    </section>
+ footer>
+    <p>&copy; 2025 Service Company</p>
+  </footer>
 </body>
 </html>
