--- a/about.html
+++ b/about.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Service Company</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About - Service Company</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>About Us</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="" href="styles.css">
+  <header>
+    <h1>About Us</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Who We Are</h2>
+    <p>We are a Bangalore-based company offering expert services in Plumbing, Painting, Masonry, Hardware, and Interior Work. Our team of skilled professionals is committed to delivering high-quality work at reasonable prices.</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 Service Company</p>
+  </footer>
+</body>
+</html>
+ lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Services - Service Company</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>Our Services</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <h2>What We Offer</h2>
-        <ul>
-            <li>Plumbing</li>
-            <li>Painting</li>
-            <li>Masonry</li>
-           ul>
-    </main>
-    <footer>
-        <p>&copy; 2025 Service Company</p>
-    </footer>
+  <header>
+    <h1>Our Services</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2> <li><strong>Plumbing:</strong> Reliable plumbing solutions for homes and businesses.</li>
+      <li><strong>Painting:</strong> Interior and exterior painting with a professional finish.</li>
+      <li><strong>Masonry:</strong> Quality brickwork, stonework, and concrete services.</li>
+      <li><strong>Hardware:</strong> Supply and installation of essential hardware fittings.</li>
+      <li><strong>Interior Work:</strong> Beautiful and functional interior design and execution.</li>
+    </ul>
+  </main>
+  <footer>
+    <p>&copy; 2025 Service Company</p>
+  </footer>
 </body>
 </html>
