--- a/services.html
+++ b/services.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - Service Company</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Services - Service Company</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>Our Services</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <h2>What We Offer</h2>
-        <ul>
-            <li><strong>Plumbing:</strong> Reliable plumbing solutions for homes and businesses.</li>
-            <li><strong>Painting:</strong> Interior and exterior painting with a professional finish.</li>
-            <li><strong>Masonry:</strong> Quality brickwork, stonework, and concrete services.</li>
-            <li><strong>Hardware:</strong> Supply and installation of essential hardware fittings.</li>
-        </ul>
-    </main>
-    <footer>
-        <p>&copy; 2025 Service Company</p>
-    </footer>
+  <header>
+    <h1>Our Services</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>What We Offer</h2>
+    <ul>
+      <li><strong>Plumbing:</strong> Reliable plumbing solutions for homes and businesses.</li>
+      <li><strong>Painting:</strong> Interior and exterior painting with a professional finish.</li>
+      <li><strong>Masonry:</strong> Quality brickwork, stonework, and concrete services.</li>
+      <li><strong>Hardware:</strong> Supply and installation of essential hardware fittings.</li>
+     strong>Interior Work:</strong> Beautiful and functional interior design and execution.</li>
+    </ul>
+    <div class="service-images">
+      <img src="https://images.unsplash.com/photo-1581579185169-3c5f3e9f9f4b" alt="Plumbing">
+      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting">
+      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Masonry">
+      <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Hardware">
+      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work">
+    </div>
+  </main>
+  <footer>
+    <p>&copy; 2025 Service Company</p>
+  </footer>
 </body>
 </html>
