--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
       <p>We provide professional Plumbing, Painting, Masonry, Hardware, and Interior Work services with expert technicians at reasonable prices.</p>
     </section>
     <section class="service-images">
-     ="https://images.unsplash.com/photo-1581579185169-3c5f3e9f9f4b" alt="Plumbing">
+      <img src="https://images.unsplash.com/photo-1581579185169-3c5f3e9f9f4b" alt="Plumbing">
       <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting">
       <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Masonry">
       <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Hardware">
       <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work">
     </section>
- footer>
+  </main>
+  <footer>
     <p>&copy; 2025 Service Company</p>
   </footer>
 </body>
