--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
       <li><strong>Painting:</strong> Interior and exterior painting with a professional finish.</li>
       <li><strong>Masonry:</strong> Quality brickwork, stonework, and concrete services.</li>
       <li><strong>Hardware:</strong> Supply and installation of essential hardware fittings.</li>
-     strong>Interior Work:</strong> Beautiful and functional interior design and execution.</li>
+     <strong>Interior Work:</strong> Beautiful and functional interior design and execution.</li>
     </ul>
     <div class="service-images">
       <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting">
