--- a/services.html
+++ b/services.html
@@ -37,5 +37,10 @@
   <footer>
     <p>&copy; 2025 Service Company</p>
   </footer>
+  <!-- AOS JS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
