--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,10 @@
   <footer>
     <p>&copy; 2025 Service Company</p>
   </footer>
+  <!-- AOS JS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
