--- a/about.html
+++ b/about.html
@@ -24,5 +24,10 @@
   </main>
   <footer>
     <p>&copy; 2025 Service Company</p>
+    <!-- AOS JS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
   </body>
 </html>
