--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Home - Service Company</title>
   <link rel="stylesheet" href="styles.css" />
   <!-- AOS CSS -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header data-aos="fade-down">
     <h1>Welcome to Our Service Company</h1>
     <nav>
       <a href="index.html">Home</a>
@@ -19,24 +19,26 @@
     </nav>
   </header>
   <main>
-    <section class="intro">
+    <section class="intro" data-aos="fade-up">
       <h2>Expert Services in Bangalore</h2>
       <p>We provide professional Plumbing, Painting, Masonry, Hardware, and Interior Work services with expert technicians at reasonable prices.</p>
     </section>
     <section class="service-images">
-      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work">
-      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting">
-      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Masonry">
-      <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Hardware">
+      <img src="https://images.unsplash.com/photo-1588776814546-ec7e5f1b4f1b?auto=format&fit=crop&w=800&q=80" alt="Plumbing" data-aos="zoom-in">
+      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting" data-aos="zoom-in">
+      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Masonry" data-aos="zoom-in">
+      <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Hardware" data-aos="zoom-in">
+      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work" data-aos="zoom-in">
     </section>
   </main>
-  <footer>
+  <footer data-aos="fade-up">
     <p>&copy; 2025 Service Company</p>
   </footer>
+
   <!-- AOS JS -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
