--- a/services.html
+++ b/services.html
@@ -6,7 +6,37 @@
   <title>Services - Service Company</title>
   <link rel="stylesheet" href="styles.css" />
   <!-- AOS CSS -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <style>
+    .service-images {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .service-images img {
+      width: 200px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+    .service-images img:hover {
+      transform: scale(1.05);
+    }
+    .service-description {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 1.2em;
+      color: #333;
+      min-height: 50px;
+    }
+    h2 {
+      text-align: center;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -18,29 +48,41 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h2>What We Offer</h2>
-    <ul>
-      <li><strong>Plumbing:</strong> Reliable plumbing solutions for homes and businesses.</li>
-      <li><strong>Painting:</strong> Interior and exterior painting with a professional finish.</li>
-      <li><strong>Masonry:</strong> Quality brickwork, stonework, and concrete services.</li>
-      <li><strong>Hardware:</strong> Supply and installation of essential hardware fittings.</li>
-      <li><strong>Interior Work:</strong> Beautiful and functional interior design and execution.</li>
-    </ul>
-    <div class="service-images">
-      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Painting">
-      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Masonry">
-      <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Hardware">
-      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work">
+    <h2 data-aos="fade-down">What We Offer</h2>
+
+    <div class="service-images" data-aos="fade-up">
+      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Plumbing" onclick="showDescription('Plumbing')">
+      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Painting" onclick="showDescription('Painting')">
+      <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Masonry" onclick="showDescription('Masonry')">
+      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Hardware" onclick="showDescription('Hardware')">
+      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work" onclick="showDescription('Interior Work')">
     </div>
+
+    <div class="service-description" id="description" data-aos="fade-in"></div>
   </main>
+
   <footer>
     <p>&copy; 2025 Service Company</p>
   </footer>
+
   <!-- AOS JS -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+
+    const descriptions = {
+      "Plumbing": "Reliable plumbing solutions for homes and businesses.",
+      "Painting": "Interior and exterior painting with a professional finish.",
+      "Masonry": "Quality brickwork, stonework, and concrete services.",
+      "Hardware": "Supply and installation of essential hardware fittings.",
+      "Interior Work": "Beautiful and functional interior design and execution."
+    };
+
+    function showDescription(service) {
+      document.getElementById('description').textContent = descriptions[service];
+    }
+  </script>
 </body>
 </html>
