--- a/services.html
+++ b/services.html
@@ -32,13 +32,14 @@
   <main>
     <h2>What We Offer</h2>
 
-    <div class="service-images">
-      <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Plumbing" onclick="showDescription('Plumbing')">
-      <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Painting" onclick="showDescription('Painting')">
-     /photos/175039/pexels-photo-175039.jpeg" alt="Masonry" onclick="showDescription('Masonry')">
-      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Hardware" onclick="showDescription('Hardware')">
-      <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work" onclick="showDescription('Interior Work')">
-    </div>
+<div class="service-images">
+  <img src="https://images.pexels.com/photos/6474471/pexels-photo-6474471.jpeg" alt="Plumbing" onclick="showDescription('Plumbing')">
+  <img src="https://images.pexels.com/photos/5691535/pexels-photo-5691535.jpeg" alt="Painting" onclick="showDescription('Painting')">
+  <img src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg" alt="Masonry" onclick="showDescription('Masonry')">
+  <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Hardware" onclick="showDescription('Hardware')">
+  <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg" alt="Interior Work" onclick="showDescription('Interior Work')">
+</div>
+
 
     <div class="service-description" id="description"></div>
   </main>
