--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
     <h1>Our Services</h1>
     <nav>
       <a href="index.html">Home</a>
-      href="services.html">Services</a>
+      <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
